@@ -8,6 +8,7 @@
 
 #include <vlad/list.h>
 #include <vlad/stringlist.h>
+#include <vlad/symtab.h>
 
 /* structure to hold facts. no checking done here, values are just stored */
 
@@ -75,6 +76,13 @@ class fact : public list_item
     int truth(bool *a_truth);
     /* gives a list of vars occuring in the fact. assumes list is init'ed */
     int varlist(stringlist **a_list);
+    /*
+     * verify if fact is valid, if vlist is non-null, check if variables
+     * occur within this list. if gnd_flag is true, ensure that the fact
+     * is ground.
+     */
+    int verify(symtab *a_stab, stringlist *a_vlist, bool a_gndflag);
+
 #ifdef VLAD_DEBUG
     /* assuming a_str has enough memory allocation */
     void print(char *a_str);
